--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,20 @@
     overflow: hidden;
     display: flex;
     gap: 20px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    font-size: 18px;
+}
+
+.profileimg {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    padding-bottom: 20px;
+}
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
 }
