--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
-* {
+html,
+body {
+    height: 100%;
     margin: 0;
-    padding: 0;
-    background-color: #f0f0f0;
+}
+
+#root {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
